# PictureN

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/picturen/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/picturen/: Camera.java  CameraCallback.java  CameraFactory.java  FrameWriter.java  FrameWriterCallback.java  FrameWriterFactory.java  FrameWriterSD.java  MainActivity.java  NativeCamera.java
app/src/main/jni/: CMakeLists.txt  CameraProvader.cpp  CameraProvader.h  capture.cpp  log_utils.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/picturen/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
